--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <label id="myLabel"></label>
+    <label style="font-size: 100px" id="myLabel"></label>
     
     <script src="js/scripts.js"></script>
 </body>
